--- a/sass/arenda.scss
+++ b/sass/arenda.scss
@@ -281,6 +281,11 @@
 		font-size: 2.7em;
 	}
 }
+@media only screen and (max-width: 420px) and (orientation: portrait) {
+	.arenda {
+		top: 8vh;
+	}
+}
 @media only screen and (max-width: 380px) {
 	.arenda__head {
 		font-size: 2.4em;
