--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -146,3 +146,8 @@
 		}
 	}
 }
+@media only screen and (max-width: 420px) and (orientation: portrait) {
+	.main {
+		top: 8vh;
+	}
+}
