--- a/sass/object.scss
+++ b/sass/object.scss
@@ -207,6 +207,11 @@
 		width: 100%;
 	}
 }
+@media only screen and (max-width: 420px) and (orientation: portrait) {
+	.main {
+		top: 8vh;
+	}
+}
 @media only screen and (max-width: 380px) {
 	.object__head {
 		font-size: 3em;
